Fixed footer behavior on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 10000000;
+  z-index: 10;
 }
 
 .social-icon {
@@ -101,6 +101,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 20;
+  position: relative;
 }
 
 #copyright {
